<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wathet_blue">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ceshi"/>

    <Button
        android:id="@+id/btn_ceshi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/ceshi_back"/>

    <Button
        android:id="@+id/btn_ceshi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ceshi1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/ceshi_camera"/>

</RelativeLayout>
