<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_app"
              android:orientation="vertical">

    <include layout="@layout/top_navigation"/>

    <ScrollView
        android:id="@+id/sayhi_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <!--协同-->
            <LinearLayout
                android:id="@+id/dd_btn_xtbf"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_select_white_gray"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/dd_visit_img01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_synergeticvisit"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_img01"
                        android:layout_centerHorizontal="true"
                        android:text="@string/dxtbf"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="最近拜访: 终端1"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="下次拜访: 终端2"/>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/dd_btn_xt_term"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_select_white_gray">

                        <ImageView
                            android:id="@+id/dd_visit_img06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_visit_folder"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textSize="18dp"
                            android:layout_toRightOf="@id/dd_visit_img06"
                            android:text="协同终端夹"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="张三 完成"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="建国门内大街"/>
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>

            <!--追溯-->
            <LinearLayout
                android:id="@+id/dd_btn_zdzs"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_select_white_gray"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/dd_visit_img02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_terminaltraceability"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_img02"
                        android:layout_centerHorizontal="true"
                        android:text="@string/ddzdzs"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="最近拜访: 终端1"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="下次拜访: 终端2"/>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/dd_btn_zs_term"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_select_white_gray">

                        <ImageView
                            android:id="@+id/dd_visit_img07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_visit_folder"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textSize="18dp"
                            android:layout_toRightOf="@id/dd_visit_img07"
                            android:text="追溯终端夹"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="张三 完成"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="建国门内大街"/>
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>

            <!--经销商-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--经销商资料库-->
                <LinearLayout
                    android:id="@+id/dd_btn_zs_agencyres"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/bg_select_white_gray">

                    <ImageView
                        android:id="@+id/dd_visit_img03"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/icon_visit_dealerdatabase"/>

                    <TextView
                        android:layout_marginTop="@dimen/font_size7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size3"
                        android:textColor="@color/bg_top_navigation_title"
                        android:text="经销商资料库"/>

                </LinearLayout>

                <!--经销商库存盘点-->
                <RelativeLayout
                    android:id="@+id/dd_btn_zs_agencycheck"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_select_white_gray">

                    <ImageView
                        android:id="@+id/dd_visit_img04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_stock"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_img04"
                        android:layout_centerHorizontal="true"
                        android:text="经销商库存盘点"/>

                </RelativeLayout>

            </LinearLayout>
            <!--新增终端-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/dd_btn_zs_addterm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_select_white_gray">

                    <ImageView
                        android:id="@+id/dd_visit_img05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_drainmakeupshop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_img05"
                        android:layout_centerHorizontal="true"
                        android:text="漏店补录"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    >

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/dd_operation_btn_summer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_select_white_gray"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/dd_visit_imgsync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_dealerdatabase"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_imgsync"
                        android:layout_centerHorizontal="true"
                        android:text="@string/operation_weeksummer"/>

                </RelativeLayout>

                <!--同步数据-->
                <RelativeLayout
                    android:id="@+id/dd_btn_visit_sync_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:background="@drawable/bg_select_white_gray">

                    <ImageView
                        android:id="@+id/dd_visit_imgsync2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/icon_visit_stock"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dd_visit_imgsync2"
                        android:layout_centerHorizontal="true"
                        android:text="同步数据"/>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
